--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cypress": "^12.17.3"
   },
   "dependencies": {
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "neat-csv": "^5.2.0",
+    "papaparse": "^5.4.1"
   }
 }
